--- a/views/index.html
+++ b/views/index.html
@@ -21,10 +21,7 @@
     <div class="container">
       <canvas 
         ref="game"
-        id="game-window" 
-        width="640" 
-        height="480"
-      >
+        id="game-window">
       </canvas>
     </div>
   </body>
